# mlp-observatory

./: .gitignore  README.md  package-lock.json  pyproject.toml
docs/source/: api.rst  architecture.rst  conf.py  configuration.rst  development.rst  frontend.rst  index.rst  quickstart.rst  streaming.rst  training.rst
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/app/: App.tsx
frontend/src/features/compare/: CompareRunsPanel.tsx  DiffView.tsx
frontend/src/features/metrics/: DiagnosticsPanel.tsx  DistributionPanel.tsx  FeatureImportancePanel.tsx  LayerTrendsPanel.tsx  MetricsView.tsx  RecommendationsView.tsx  ResourceMonitor.tsx  TrainingDynamicsPanel.tsx
frontend/src/features/network/: ActivationHeatmap.tsx  ForwardTraceView.tsx  NetworkView.tsx
frontend/src/lib/api/: config.ts
frontend/src/lib/ws/: useRunStream.ts
src/mlp_observatory/: __init__.py  main.py
src/mlp_observatory/api/: deps.py  health.py  runs.py  schemas.py  stream.py
src/mlp_observatory/app/: container.py  factory.py
src/mlp_observatory/core/: logging.py  settings.py
src/mlp_observatory/domain/: events.py  models.py
src/mlp_observatory/infra/: run_repository.py  system_monitor.py  ws_hub.py
src/mlp_observatory/services/: evaluator.py  run_service.py
src/mlp_observatory/training/: data.py  model.py  trainer.py
src/mlp_observatory/visualization/: network_graph.py
tests/unit/: test_data.py  test_graph.py
